# asyrmetry

./: Cargo.toml  README.md
src/: decode.rs  main.rs  process.rs
src/math/: mod.rs  mouvement.rs
src/math/coordinates/: cartesian.rs  mod.rs  spherical.rs
