[package]
name = "asyrmetry"
version = "0.1.0"
edition = "2021"

[dependencies]
angle-sc = { version = "^0.3" }
dasp = { version = "^0.11", features = ["signal"] }
eyre = { version = "^0.6" }
itertools = { version = "^0.13" }
symphonia = { version = "^0.5", features = ["mp3"] }
tinyaudio = { version = "^1.0" }

[profile.dev]
opt-level = 1
